--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-merge-refs": "1.1.0",
     "react-scripts": "4.0.3",
     "three": "0.129.0",
+    "typescript": "4.5.4",
     "zustand": "3.6.7"
   },
   "devDependencies": {},
