--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@react-three/xr": "3.2.0",
     "@types/react": "17.0.11",
     "@types/react-dom": "17.0.7",
+    "grommet-icons": "4.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "4.3.1",
     "react-merge-refs": "1.1.0",
     "react-scripts": "4.0.3",
+    "styled-components": "5.3.5",
     "three": "0.129.0",
     "typescript": "4.5.4",
     "zustand": "3.6.7"
