--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@react-three/cannon": "1.1.0",
     "@react-three/drei": "8.2.1",
     "@react-three/fiber": "7.0.24",
+    "@react-three/flex": "0.7.0",
     "@react-three/xr": "3.2.0",
     "@types/react": "17.0.11",
     "@types/react-dom": "17.0.7",
@@ -19,6 +20,7 @@
     "react-scripts": "4.0.3",
     "styled-components": "5.3.5",
     "three": "0.129.0",
+    "troika-three-text": "0.46.4",
     "typescript": "4.5.4",
     "zustand": "3.6.7"
   },
